--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
 /* =========================
    EDIT HERE (Personalize)
    ========================= */
-const HER_NAME = "My Love"; // change to her name/nickname, e.g. "Kemi"
-const FINAL_CLUE_MAIN = "Go to where I park… 🚗";
-const FINAL_CLUE_REVEAL = "And check the TRUNK 💝"; // or make it a riddle if you prefer
+const HER_NAME = "My Beautiful Oyinlade"; // change to her name/nickname, e.g. "Kemi"
+const FINAL_CLUE_MAIN = "Take my CAR KEY! Go to where I park… 🚗";
+const FINAL_CLUE_REVEAL = "And check the BOOT, Your SPECIAL VAL PACKAGE is waiting for you to pick up 💝"; // or make it a riddle if you prefer
 
 // Each question has: q (question), a (answers), after (message after she clicks), hint (optional)
 const quiz = [
