--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
    EDIT HERE (Personalize)
    ========================= */
 const HER_NAME = "My Beautiful Oyinlade"; // change to her name/nickname, e.g. "Kemi"
-const FINAL_CLUE_MAIN = "Take my CAR KEY! Go to where I park… 🚗";
+const FINAL_CLUE_MAIN = "Look for my CAR KEY! Go to where I park… 🚗";
 const FINAL_CLUE_REVEAL = "And check the BOOT, Your SPECIAL VAL PACKAGE is waiting for you to pick up 💝"; // or make it a riddle if you prefer
 
 // Each question has: q (question), a (answers), after (message after she clicks), hint (optional)
@@ -366,7 +366,7 @@ function handleAnswer(){
       setProgress(quiz.length);
       suspenseReveal();
     }
-  }, 900);
+  }, 1000);
 }
 
 function suspenseReveal(){
